# CG

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Animation/Kinematics/: CCDIK.cpp  CMakeLists.txt  FABRIK-full.cpp  FABRIK.cpp  config.h.in  fabrik-full-input
Animation/MANN/: MANN.ipynb  mann.py
Animation/PFNN/: PFNN.ipynb  pfnn.py
DS/: CMakeLists.txt  Halfedge.h  TestHalfedge.cpp  config.h.in
DS/resources/: cloth.off  sphere.off
Math/: CMakeLists.txt  Quaternion.hpp  VectorOperation.cpp
PhySim/: APIC.cpp  CMakeLists.txt  Eulerian.cpp  FLIP.cpp  GUI.h  MPM.cpp
PhySim/PBD/: BallWithTrack.cpp  Incompressible.cpp  Pendulum.cpp  Spring.cpp
RasterizeRenderer/: CMakeLists.txt  main.cpp
Renderer/PathTracing/: Buffer.h  CMakeLists.txt  camera.hpp  hittable_list.hpp  interval.hpp  ray.hpp
Renderer/Rasterize/: CMakeLists.txt  main.cpp
Tests/UseRayLib/: CMakeLists.txt  ChineseFont.cpp  Interaction.cpp
Tests/UseRayLib/Damper/: Damper.cpp  Trajectory.cpp
common/: Buffer.h
raytracing/: CMakeLists.txt  camera.hpp  global.hpp  hittable.hpp  main.cpp  material.hpp  quaternion.hpp  sphere.hpp
useraylib/: CMakeLists.txt  ChineseFont.cpp  DrawTest.cpp
